--- a/doc/algebra.tex
+++ b/doc/algebra.tex
@@ -39,7 +39,18 @@
 	\vspace{5em}
 	\tableofcontents
 \chapter{Einleitung}
-Was ist Algebra? Von seiner Wortbedeutung her bedeutet Algebra die \textit{Lehre von den Gleichungen} oder die \textit{Theorie der Verknüpfungen mathematischer Strukturen}. Um Aussagen darüber treffen zu können, was Gleichungen oder Verknüpfungen sind, muss definiert werden, wie die Strukturen aussehen, die miteinander verglichen oder verknüpft werden. Um den Begriff Struktur besser zu verstehen, lohnt sich ein Blick in die Informatik. Mögliche Strukturen in der Informatik sind zum Beispiel \textit{Listen} oder \textit{Stacks}. Dabei enthält ein Liste eine Menge von Elementen, wobei die Elemente jeweils einen Wert annehmen. Die Beschreibung der Liste als Datenstruktur eignet sich aber auch schon für die Beschreibung der mathematischen Struktur des \textit{Vektors}. Mögliche Verknüpfungen von Vektoren sind zum Beispiel die Addition oder Multiplikation zweier Vektoren, die in dieser Verknüpfung wieder einen Vektor als Ergebnis haben. Es ist nicht unüblich in der Informatik auch eine Liste von Listen zu nutzen, um zur Laufzeit effizient auf die Datenstruktur zugreifen zu können. Die Beschreibung der Liste von Listen eignet sich aber auch für die Beschreibung der mathematischen Struktur der \textit{Matrix}. Mögliche Verknüpfungen von Matrizen sind zum Beispiel die Addition oder Multiplikation zweier Matrizen, die in dieser Verknüpfung wieder eine Matrix als Ergebnis haben.
+Was ist Algebra? Von seiner Wortbedeutung her bedeutet Algebra die \textit{Lehre von den Gleichungen} oder die \textit{Theorie der Verknüpfungen mathematischer Strukturen}. Um Aussagen darüber treffen zu können, was Gleichungen oder Verknüpfungen sind, muss definiert werden, wie die Strukturen aussehen, die miteinander verglichen oder verknüpft werden. Um den Begriff Struktur besser zu verstehen, lohnt sich ein Blick in die Informatik. Mögliche Strukturen in der Informatik sind zum Beispiel \textit{Listen} oder \textit{Stacks}. Dabei enthält ein Liste eine Menge von Elementen, wobei die Elemente jeweils einen Wert annehmen. Die Beschreibung der Liste als Datenstruktur eignet sich aber auch für die Beschreibung der mathematischen Struktur des \textit{Vektors}. Mögliche Verknüpfungen von Vektoren sind zum Beispiel die Addition oder Multiplikation zweier Vektoren, die in dieser Verknüpfung wieder einen Vektor als Ergebnis haben. Es ist nicht unüblich in der Informatik auch eine Liste von Listen zu nutzen, um zur Laufzeit effizient auf die Datenstruktur zugreifen zu können. Die Beschreibung der Liste von Listen eignet sich aber auch für die Beschreibung der mathematischen Struktur der \textit{Matrix}. Mögliche Verknüpfungen von Matrizen sind zum Beispiel die Addition oder Multiplikation zweier Matrizen, die in dieser Verknüpfung wieder eine Matrix als Ergebnis haben.
+
+In dieser Arbeit werden die grundlegenden Strukturen der Algebra definiert, der Vektor und die Matrix. Der Begriff \textit{Projektion} wird eingeführt und als Ergebnis von linear kombinierten Vektoren aufgefasst. Dabei bildet der \textit{Kern} die kleinste nicht mehr projizierbare Einheit in seiner Umgebung des Raumes, in dem er zum Projizieren verwendet wird. Anschließend werden Verknüpfungen für die Struktur des Vektors und für die Struktur der Matrix definiert, das sind die Addition und die Multiplikation. Dabei fällt auf, dass Vektoren in der Verknüpfung der Multiplikation sich leichter verknüpfen lassen als Matrizen. Vektoren bilden einen \textit{wohl geformten Körper} und Matrizen nicht. Strukturen können einen Schwerpunkt haben. Den Schwerpunkt einer Struktur zu finden, lohnt sich, da Strukturen in ihrem Schwerpunkt miteinander verknüpft werden können und erst im Schwerpunkt die Verknüpfung am leichtesten ist hinsichtlich der benötigten Rechenoperationen.
+
+Es wird gezeigt, dass die $1$ die wichtigste Zahl ist. Es wird auch gezeigt, dass $\{0, 1\}$ die wichtigsten Zahlen sind, da der Wert von binären Zahlen exponentiell in der Basis 2 ist und dieser Wertebereich das effiziente Anwenden von Verknüpfungen im Schwerpunkt durch Halbieren ermöglicht.
+
+Der Algorithmus \textsc{Strassen-25} wird vorgestellt, der zwei $n \times n$ Matrizen mit einer Laufzeit von $O(n^{2.3219})$ multipliziert. Dieser modifiziert den bekannten Algorithmus von \textsc{Strassen} für die Matrixmultiplikation. Es wird gezeigt, dass zwei $n \times n$ Matrizen nicht schneller multipliziert werden können. Es gibt keinen Teile-und-Herrsche Algorithmus zur Multiplikation von $n \times n$ Matrizen, der durch Nutzen von linearen Abhängigkeiten weniger als 5 Matrixmultiplikationen benötigt. Es wird das optimale Teile-und-Herrsche Prinzip eingeführt. Das optimale Teile-und-Herrsche Prinzip ist die effizienteste Methode, um Probleme zu lösen, wenn die Probleminstanz bei jedem rekursiven Aufruf halbiert wird.
+
+Der Algorithmus \textsc{Strassen-25} eignet sich zum Finden von Kernen in ihrem Raum. Darauf aufbauend wird ein Verfahren vorgestellt, mit der Matrizen effizient verknüpft werden können, unabhängig davon, ob es sich bei der Verknüpfung um eine Addition oder Multiplikation handelt. Die Idee ist, die Menge aller Kerne in einem eingeschränkten Wertebereich zu finden und damit alle Ergebnisse für eine konkrete Verknüpfung zu projizieren. 
+ 
+Außerdem wird auf das Deep-Learning eingegangen mit einer Änderung in der Vorgehensweise. Die Idee ist, nicht die herkömmliche  Matrixmultiplikation zweier $n \times n$ Matrizen zu verwenden. Effizienter ist es, die Gewichtsmatrix einer Ebene in ihren Vektoren aufzufassen und jeden einzelnen Vektor mit dem Vektor der Eingabe für das neuronale Netz zu multiplizieren.
+
 \chapter{Definitionen}
 Zur Betrachtung der Algebra folgen Definitionen, die für den weiteren Verlauf dieser Arbeit nützlich sind.
 \section{Strukturen}
@@ -359,7 +370,7 @@ Damit in jedem Rekursionsschritt die Produkte $A_{ij}B_{ij}$ effizient gespeiche
 	Es gibt keinen Teile-und-Herrsche Algorithmus zur Multiplikation von $n \times n$ Matrizen, der durch Nutzen von Abhängigkeiten weniger als 8 Matrixmultiplikationen benötigt und damit auch weniger als 5 Matrixmultiplikationen benötigt. 
 \end{satz}
 \begin{proof}
-	Angenommen, es gibt einen Teile-und-Herrsche Algorithmus zur Multiplikation von $n \times n$ Matrizen, der mit weniger als 5 Matrixmultiplikationen auskommt, dann muss dieser Algorithmus auch Abhängigkeiten $P_r = (P_s, P_t, A_{ij}B_{ij})$ verwenden, mit denen $P_r$ ermittelt werden kann, $r < 5$. Da $dim(A_{ij}) = dim(B_{ij}) = \frac{n}{2}$, ist es nicht möglich $C = AB$ zu berechnen. Das gesamte Bild der \textit{projizierten} Produktmatrix $C$ kann nur projiziert werden, wenn mindestens mehr als die Hälfte beider Matrizen $A_{ij}$ und $B_{ij}$ zum Projezieren verfügbar ist.
+	Angenommen, es gibt einen Teile-und-Herrsche Algorithmus zur Multiplikation von $n \times n$ Matrizen, der mit weniger als 5 Matrixmultiplikationen auskommt, dann muss dieser Algorithmus auch Abhängigkeiten $P_r = (P_s, P_t, A_{ij}B_{ij})$ verwenden, mit denen $P_r$ ermittelt werden kann, $r < 5$. Da $dim(A_{ij}) = dim(B_{ij}) = \frac{n}{2}$, ist es nicht möglich $C = AB$ zu berechnen. Das gesamte Bild der \textit{projizierten} Produktmatrix $C$ kann nur projiziert werden, wenn mindestens mehr als die Hälfte beider Matrizen $A_{ij}$ und $B_{ij}$ zum Projizieren verfügbar ist.
 \end{proof}
 \begin{satz}
 	Das optimale Teile-und-Herrsche Prinzip ist die effizienteste Methode, um Probleme zu lösen, wenn die Probleminstanz bei jedem rekursiven Aufruf halbiert wird. 
